--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="col-sm-6">
           <div> 
-            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. I enjoy working in a team, but I can also function independently. </p>
+            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. I enjoy working in a team, but I can also function independently. I am very communicative and social and I'm always eager to learn things. </p>
             <p>This portfolio shows what I have done throughout my college career and what I want to do in the future.</p>
           </div>
         </div>
@@ -171,9 +171,10 @@
                         <h4 class="subheading">The end</h4>
                     </div>
                     <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. Down below you can find our project plan, realisation document, and my reflection  </p>
-                      <p class="timeline-body"><p class="text-muted">The realistaion document</p>
-                      <p class="timeline-body"><p class="text-muted">The project plan</p>
-                      <p class="timeline-body"><p class="text-muted">The reflection</p>
+                     <br>
+                      <p class="timeline-body"><p class="text-muted"><a href="Project plan.pdf" target="_blank">The project plan</a></p>
+                      <p class="timeline-body"><p class="text-muted"><a href="realisation document.pdf" target="_blank">The realistaion document</a></p>
+                      <p class="timeline-body"><p class="text-muted"><a href="reflectie stage.pdf" target="_blank">The reflection</a></p>
                     </div>
                 </div>
             </li>
@@ -523,7 +524,7 @@
                 <p class="item-intro text-muted">Erasmus to Sweden</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/zweden1.jpg" alt="">
                 <p>My internship consisted of testing the security of a number of smart home devices that can be found everywhere on the market. We have then written all our findings in a paper that may be published in Stockholm next year. This went from the data that the device forwarded to its server to the possible access points where a potential hacker can enter. Down below you can find our paper</p>
-                <p class="timeline-body"><p class="text-muted">The paper</p>
+                <p class="timeline-body"><p class="text-muted"><a href="paper cybersecurity on smart home devices.pdf" target="_blank">The paper</a></p>
                 <ul class="list-inline">
                   <li>Date: May 2020</li>
                   <li>Client: Halmstad University</li>
