--- a/index.html
+++ b/index.html
@@ -93,11 +93,6 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.facebook.com/joey.vanerum">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/joey-van-erum-89a875171/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
@@ -118,7 +113,10 @@
         </div>
         <div class="col-sm-6">
           <div> 
-            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. I enjoy working in a team, but I can also function independently. I am very communicative and social and I'm always eager to learn things. </p>
+            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. I enjoy working in a team, but I can also function independently. I am very communicative and social and I'm always eager to learn new things.</p>
+            <p style="font-weight: bolder;">Education</p>
+            <p>From 2013 to 2017 I studied mechanics with an additional 7th year of training in
+              maintenance techniques, but after finishing this, I knew that this was not what I would like to do all my life. So in 2017 I started something completely new, and to this day I have not regretted it.</p>
             <p>This portfolio shows what I have done throughout my college career and what I want to do in the future.</p>
           </div>
         </div>
@@ -173,7 +171,7 @@
                     <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. Down below you can find our project plan, realisation document, and my reflection  </p>
                      <br>
                       <p class="timeline-body"><p class="text-muted"><a href="Project plan.pdf" target="_blank">The project plan</a></p>
-                      <p class="timeline-body"><p class="text-muted"><a href="realisation document.pdf" target="_blank">The realistaion document</a></p>
+                      <p class="timeline-body"><p class="text-muted"><a href="realisation document.pdf" target="_blank">The realisation document</a></p>
                       <p class="timeline-body"><p class="text-muted"><a href="reflectie stage.pdf" target="_blank">The reflection</a></p>
                     </div>
                 </div>
@@ -344,17 +342,12 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/Joey_V_Erum">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/joey-van-erum-89a875171/">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
@@ -384,6 +377,7 @@
                 <p class="item-intro text-muted">Hosting a webserver for other students</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/lamp.png" alt="">
                 <p>With this project we made a hosting platform for the website of the students from APP. We made everything here in Docker Compose, which was a very big challenge, but it still worked.</p>
+                <p>Here I learned to work on a project with a team and to create a hosting environment for the first time. I also worked with Docker for the first time, which was also educational.</p>
                 <p>In this document you can see what we have all built up during this project week: <a href="Project hosting.pdf" target="_blank">Project Hosting</a></p>
                 <ul class="list-inline">
                   <li>Date: June 2019</li>
@@ -420,6 +414,7 @@
                 <p>In my last year I had the privilege to work with a team of six on a mobile application. The main goals of this project were three things: efficiency, thinking green and improving safety.
                   The mobile application took care of tracking your location, giving you the fastest route and alarming one if he comes to close to a transportation vehicle. This would boost the efficiency of a docker in the port of Antwerp.
                   I was mainly working on the hosting part of the app, we did this with AWS. We also needed a way to host the backend on our server and we did this with docker files.</p>
+                <p>In this project I have learned to work with people who are specialized in different things which will also probably happen in the field. I also learned to work for a real customer, which was also an enrichment in my student career.</p>  
                 <p>Here you will find a video that we made where you see our app in operation: <a href="https://www.youtube.com/watch?v=h-qB6DSNlSw&list=WL&index=106&t=0s" target="_blank">Link</a></p>
                 <p>if you want to take a look at the site itself, click this <a href="https://estebanbeerens.com/portfolio/porttracker/" target="_blank">link</a></p>
                   <ul class="list-inline">
@@ -455,6 +450,7 @@
                 <p class="item-intro text-muted">Security audit for a company</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/security audit2.jpg" alt="">
                 <p>In the third year, me and a few others were allowed to perform a security audit at a company, this gave us the opportunity to learn a lot of penetration tools and to find all kinds of weaknesses in their network. Here we have written a document about what can be done better in the future and what they should pay attention to.</p>
+                <p>During this project I learned what it is like to do a security audit at a company and what you all have to take into account. I also learned from this how to deal with people who have less or no understanding of IT</p>
                 <ul class="list-inline">
                   <li>Date: Oktober-November 2019</li>
                   <li>Client: Classified</li>
@@ -489,6 +485,7 @@
                 <p class="item-intro text-muted">Desinging infrastucture for a company.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/network3.PNG" alt="">
                 <p>In this project I designed a network infrastructure together with 4 other students. We were commissioned here to build a network infrastructure for a 3-storey building using as little material as possible. This project was quite extensive because it went from internet cables to finding routers and switches and placing them in the right places so that everyone in the building has sufficient internet connection.</p>
+                <p>In this project I learned to build a network infrastructure for an imaginary customer.</p>
                 <p>In this document you can find all our findings that we found during this project week <a href="Infra project - Team 6.pdf" target="_blank">Infra project</a></p>
                 <ul class="list-inline">
                   <li>Date: January 2019</li>
@@ -524,6 +521,7 @@
                 <p class="item-intro text-muted">Erasmus to Sweden</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/zweden1.jpg" alt="">
                 <p>My internship consisted of testing the security of a number of smart home devices that can be found everywhere on the market. We have then written all our findings in a paper that may be published in Stockholm next year. This went from the data that the device forwarded to its server to the possible access points where a potential hacker can enter. Down below you can find our paper</p>
+                <p>In this project I learned what it is like to work from home and that it is not as ideal as it seems. I also learned how to communicate with a foreign customer. I have also seen new things for testing the devices and of course also writing the paper because I had no experience with this.</p>
                 <p class="timeline-body"><p class="text-muted"><a href="paper cybersecurity on smart home devices.pdf" target="_blank">The paper</a></p>
                 <ul class="list-inline">
                   <li>Date: May 2020</li>
