--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                 25%
               </div>
             </div> -->
+            <p class="text-muted" style="font-style: italic;">"The harder the conflict, the more glorious the triumph" -Thomas Paine</p>
           </div>
         </div>
   </section>
