--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Hello!</div>
         <div class=" intro-lead-in ">I am Joey Van Erum</div>
-        <div class="intro-heading  text-xl-center">A cloud & cybersecurity enthousiast.</div>
+        <div class="intro-heading  text-xl-center">A cloud & cybersecurity enthusiast.</div>
         <div class="text-center" style="color: white;">In this portfolio I will briefly introduce myself and you will also find a number of projects that I have made throughout my Thomas More career</div>
         <br>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">More</a>
