--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About me</h2>
+          <p class="text-muted" style="font-style: italic;">"The harder the conflict, the more glorious the triumph" -Thomas Paine</p>
           <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
@@ -86,6 +87,7 @@
             <img class="mx-auto rounded-circle" src="img/mezelf.JPG" alt="">
             <h4>Joey Van Erum</h4>
             <p class="text-muted">Cloud & Cybersecurity</p>
+            
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/Joey_V_Erum">
@@ -113,7 +115,7 @@
         </div>
         <div class="col-sm-6">
           <div> 
-            <p>Hi, I'm a 22 years old student in Cloud & Cybersecurity at Thomas More Kempen. I am a hardworking and motivated person who is very passionate about IT. I enjoy working in a team, but I can also function independently. I am very communicative and social and I'm always eager to learn new things.</p>
+            <p>Hi, I'm a 22-year old Cloud & Cybersecurity student at Thomas More Kempen. I am a hard-working and motivated person who is very passionate about IT. I enjoy working in a team, but I can also function independently. I am very communicative and social and I'm always eager to learn new things.</p>
             <p style="font-weight: bolder;">Education</p>
             <p>From 2013 to 2017 I studied mechanics with an additional 7th year of training in
               maintenance techniques, but after finishing this, I knew that this was not what I would like to do all my life. So in 2017, I started something completely new, and to this day I have not regretted it.</p>
@@ -125,7 +127,7 @@
                 25%
               </div>
             </div> -->
-            <p class="text-muted" style="font-style: italic;">"The harder the conflict, the more glorious the triumph" -Thomas Paine</p>
+           <p>Further interest in my profile? Here you will find my resume: <a href="cv/CV_Joey_Van_Erum portfolio.pdf" target="_blank">Resume</a> </p>
           </div>
         </div>
   </section>
