hopelijk laatste aanpassingen

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll-trigger" href="#erasmus">Erasmus</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -64,7 +64,7 @@
         <div class="intro-lead-in">Hello!</div>
         <div class=" intro-lead-in ">I am Joey Van Erum</div>
         <div class="intro-heading  text-xl-center">A cloud & cybersecurity enthusiast.</div>
-        <div class="text-center" style="color: white;">In this portfolio I will briefly introduce myself and you will also find a number of projects that I have made throughout my Thomas More career</div>
+        <div class="text-center" style="color: white;">In this portfolio I will briefly introduce myself and you will also find a number of projects that I have made throughout my Thomas More career.</div>
         <br>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">More</a>
       </div>
@@ -178,7 +178,7 @@
                         <h4>May 2020</h4>
                         <h4 class="subheading">The end</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">After finishing everything, I still come across a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. Down below you can find our project plan, realization document, and my reflection  </p>
+                    <div class="timeline-body"><p class="text-muted">After finishing everything, I still had a nice experience. We have been given the opportunity to work with a foreign client, which not every student can say about their internship. Down below you can find our project plan, realization document, and my reflection  </p>
                      <br>
                       <p class="timeline-body"><p class="text-muted"><a href="Project plan.pdf" target="_blank">The project plan</a></p>
                       <p class="timeline-body"><p class="text-muted"><a href="realisation document.pdf" target="_blank">The realization document</a></p>
@@ -196,12 +196,12 @@
 </section>
 
 
-<!--portfolio-->
-  <section class="bg-light page-section" id="portfolio">
+<!--projects-->
+  <section class="page-section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
+          <h2 class="section-heading text-uppercase">Projects</h2>
           <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
@@ -532,7 +532,7 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/zweden1.jpg" alt="">
                 <p>My internship consisted of testing the security of several smart home devices that can be found everywhere on the market. We have then written all our findings in a paper that may be published in Stockholm next year. This went from the data that the device forwarded to its server to the possible access points where a potential hacker can enter. Down below you can find our paper</p>
                 <p>In this project, I learned what it is like to work from home and that it is not as ideal as it seems. I also learned how to communicate with a foreign customer. I have seen new things for testing the devices and of course writing the paper because I had no experience with this.</p>
-                <p class="timeline-body"><p class="text-muted"><a href="paper cybersecurity on smart home devices.pdf" target="_blank">The paper</a></p>
+                <p class="timeline-body"><p class="text-muted"><a href="paper cybersecurity on smart home devices.pdf" target="_blank">The research paper</a></p>
                 <ul class="list-inline">
                   <li>Date: May 2020</li>
                   <li>Client: Halmstad University</li>
