--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Hello!</div>
-        <div class=" intro-lead-in ">I am Joey Van Erum</div>
-        <div class="intro-heading  text-xl-center">A cloud & cybersecurity enthusiast.</div>
-        <div class="text-center" style="color: white;">In this portfolio I will briefly introduce myself and you will also find a number of projects that I have made throughout my Thomas More career.</div>
+        <div class="intro-lead-in " style="font-size: 45px;">I am Joey Van Erum</div>
+        <div class="intro-heading  text-xl-center" style="font-style: 40px;">A cloud & cybersecurity enthusiast.</div>
+        <div class="text-center" style="color: white; font-weight: bold;">In this portfolio I will briefly introduce myself and you will also find a number of projects that I have made throughout my Thomas More career.</div>
         <br>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">More</a>
       </div>
@@ -105,11 +105,6 @@
                   <i class="fas fa-envelope"></i>
                  </a>
               </li>
-              <li class="list-inline-item">
-                <a href="cv/CV_Joey_Van_Erum portfolio.pdf" target="_blank">
-                <i>CV</i>
-              </a>
-            </li>
             </ul>
           </div>
         </div>
@@ -127,7 +122,7 @@
                 25%
               </div>
             </div> -->
-           <p>Further interest in my profile? Here you will find my resume: <a href="cv/CV_Joey_Van_Erum portfolio.pdf" target="_blank">Resume</a> </p>
+           <p>Further interest in my profile? Here you will find <a href="cv/CV_Joey_Van_Erum portfolio.pdf" target="_blank">my resume</a></p>
           </div>
         </div>
   </section>
