--- a/index.html
+++ b/index.html
@@ -356,6 +356,12 @@
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
+          </li>
+          <li class="list-inline-item">
+            <a href="mailto:joey.vanerum97@gmail.com">
+            <i class="fas fa-envelope"></i>
+           </a>
+          </li>
           </ul>
         </div>
       </div>
