--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <h4 class="subheading">Our Humble Beginnings</h4>
                     </div>
                     <div class="timeline-body"><p class="text-muted">On March 7 we left on our foreign adventure but unfortunately, this did not last long, after 10 days we had to return to Belgium. Our assignment was to check the security of smart home devices, such as what data they send back to their server and whether this is all done securely.
-                       Of course, due to the circumstances, we had to investigate everything at home with the devices that we had, so we started asking friends and family whether they had any smart devices. Fortunately, a friend still had some equipment and we could already start our internship.</p></div>
+                       Of course, due to the circumstances, we had to investigate everything at home with the devices that we had, so we started asking friends and family whether they had any smart devices. Fortunately, a friend still had some equipment and we could start our internship.</p></div>
                 </div>
             </li>
             <li class="timeline-inverted">
@@ -154,7 +154,7 @@
                         <h4>March-April 2020</h4>
                         <h4 class="subheading">Smart devices</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">On the Google devices, we found relatively little information that could be harmful. Only on the Google Chromecast, we found quite a lot of information about the device itself, such as which encryption she used and ip addresses and mac addresses. On the smart TV I researched, we could see which sites this person went to with the TV browser. Also a number of XML files where the serial number and other information about the TV itself were stored.</p></div>
+                    <div class="timeline-body"><p class="text-muted">On the Google devices, we found relatively little information that could be harmful. Only on the Google Chromecast, we found quite a lot of information about the device itself, such as which encryption it used and ip addresses and mac addresses. On the smart TV I researched, we could see which sites this person went to with the TV browser. Also, several XML files where the serial number and other information about the TV itself were stored.</p></div>
                 </div>
             </li>
             <li>
